# bitcoin-terminal-dashboard

./: Cargo.toml  README.md
src/: lib.rs  main.rs  utils.rs
src/app/: mod.rs  state.rs
src/app/ui/: mod.rs
src/app/ui/components/: mod.rs
src/app/ui/components/metrics_section_component/: average_block_time_for_last_2016_blocks.rs  average_block_time_since_last_difficulty_adjustement.rs  average_fees_per_block_over_last_2016_blocks.rs  average_fees_per_block_over_last_24_hours.rs  bitcoin_price.rs  block_count_until_retarget.rs  block_height_metric.rs  block_subsidy_of_most_recent_block.rs  blocks_mined_over_last_24_hours.rs  chain_size.rs  current_difficulty_epoch.rs  difficulty.rs  estimated_hash_rate_per_second_for_last_2016_blocks.rs  estimated_seconds_until_retarget.rs  fees_as_a_percent_of_reward_for_last_2016_blocks.rs  fees_as_a_percent_of_reward_for_last_24_hours.rs  header_component.rs  loading_component.rs  mod.rs  new_transactions_count_over_last_30_days_metric.rs  sats_per_dollar.rs  seconds_since_new_block_metric.rs  total_fees_for_last_24_hours.rs  total_transaction_count.rs  tps_for_last_30_days.rs  utxo_set_size.rs
src/app/ui/components/metrics_section_component/metrics_line_component/: mod.rs
src/inputs/: events.rs  mod.rs
