[package]
name = "bitcoin-terminal-dashboard"
version = "0.1.4"
edition = "2021"
description = "A Bitcoin dashboard in the terminal"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
bitcoin-price = "0.1.2"

log = "0.4"
bitcoin-node-query = "=0.1.7"
jsonrpc = "0.13.0"
time = { version = "0.2", default-features = false }

tui = { version = "0.19", features = ["crossterm"], default-features = false }
crossterm = "0.19"
tokio = { version = "1", features = ["full"] }

eyre = "0.6"
